// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Navigation/Navigation Navigation 1`] = `
<div
  className="css-swx89l"
  id="navigation"
>
  <div
    className="css-1yu1zd0"
  >
    <div
      className="css-16axjtf"
    >
      <a
        className="chakra-link css-3le2fk"
        href="/"
        rel="noopener noreferrer"
      >
        <div
          className="css-znsoff"
        >
          <svg
            className="chakra-icon css-1nsz2z9"
            focusable={false}
            viewBox="0 0 33.787568 17.315006"
          >
            <g>
              <text
                x=".021"
                y="10.118"
              >
                YES
              </text>
              <text
                x=".042"
                y="17.251"
              >
                THEORY
              </text>
              <text
                fill="#0167ff"
                transform="rotate(90)"
                x="-.489"
                y="-27.315"
              >
                FAM
              </text>
            </g>
          </svg>
        </div>
      </a>
      <svg
        className="chakra-icon css-dvq678"
        focusable={false}
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    className="css-1kuyx4r"
  >
    <div
      className="css-1vh6z56"
    >
      <div
        className="chakra-stack css-1m56apc"
      >
        <a
          className="chakra-link css-1o9qqxh"
          href="/"
          rel="noopener noreferrer"
        >
          <div
            className="css-1btwv0h"
          >
            <svg
              className="chakra-icon css-1nsz2z9"
              focusable={false}
              viewBox="0 0 33.787568 17.315006"
            >
              <g>
                <text
                  x=".021"
                  y="10.118"
                >
                  YES
                </text>
                <text
                  x=".042"
                  y="17.251"
                >
                  THEORY
                </text>
                <text
                  fill="#0167ff"
                  transform="rotate(90)"
                  x="-.489"
                  y="-27.315"
                >
                  FAM
                </text>
              </g>
            </svg>
          </div>
        </a>
        <a
          className="chakra-link css-f6i9u1"
          href="/blog"
          rel="noopener noreferrer"
        >
          Blog
        </a>
        <a
          className="chakra-link css-1q4kjoy"
          href="/photowall"
          rel="noopener noreferrer"
        >
          Photowall
        </a>
        <button
          className="chakra-button css-4xx2wk"
          onClick={[Function]}
          role="group"
          type="button"
        >
          <svg
            className="chakra-icon css-1sxb4fp"
            focusable={false}
            viewBox="0 0 245 240"
          >
            <path
              d="M104.4 103.9c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.2-5 10.2-11.1.1-6.1-4.5-11.1-10.2-11.1zM140.9 103.9c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.2-5 10.2-11.1s-4.5-11.1-10.2-11.1z"
            />
            <path
              d="M189.5 20h-134C44.2 20 35 29.2 35 40.6v135.2c0 11.4 9.2 20.6 20.5 20.6h113.4l-5.3-18.5 12.8 11.9 12.1 11.2 21.5 19V40.6c0-11.4-9.2-20.6-20.5-20.6zm-38.6 130.6s-3.6-4.3-6.6-8.1c13.1-3.7 18.1-11.9 18.1-11.9-4.1 2.7-8 4.6-11.5 5.9-5 2.1-9.8 3.5-14.5 4.3-9.6 1.8-18.4 1.3-25.9-.1-5.7-1.1-10.6-2.7-14.7-4.3-2.3-.9-4.8-2-7.3-3.4-.3-.2-.6-.3-.9-.5-.2-.1-.3-.2-.4-.3-1.8-1-2.8-1.7-2.8-1.7s4.8 8 17.5 11.8c-3 3.8-6.7 8.3-6.7 8.3-22.1-.7-30.5-15.2-30.5-15.2 0-32.2 14.4-58.3 14.4-58.3 14.4-10.8 28.1-10.5 28.1-10.5l1 1.2c-18 5.2-26.3 13.1-26.3 13.1s2.2-1.2 5.9-2.9c10.7-4.7 19.2-6 22.7-6.3.6-.1 1.1-.2 1.7-.2 6.1-.8 13-1 20.2-.2 9.5 1.1 19.7 3.9 30.1 9.6 0 0-7.9-7.5-24.9-12.7l1.4-1.6s13.7-.3 28.1 10.5c0 0 14.4 26.1 14.4 58.3 0 0-8.5 14.5-30.6 15.2z"
            />
          </svg>
          Sign in with Discord
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common/Navigation/Navigation Navigation logged in 1`] = `
<div
  className="css-swx89l"
  id="navigation"
>
  <div
    className="css-1yu1zd0"
  >
    <div
      className="css-16axjtf"
    >
      <a
        className="chakra-link css-3le2fk"
        href="/"
        rel="noopener noreferrer"
      >
        <div
          className="css-znsoff"
        >
          <svg
            className="chakra-icon css-1nsz2z9"
            focusable={false}
            viewBox="0 0 33.787568 17.315006"
          >
            <g>
              <text
                x=".021"
                y="10.118"
              >
                YES
              </text>
              <text
                x=".042"
                y="17.251"
              >
                THEORY
              </text>
              <text
                fill="#0167ff"
                transform="rotate(90)"
                x="-.489"
                y="-27.315"
              >
                FAM
              </text>
            </g>
          </svg>
        </div>
      </a>
      <svg
        className="chakra-icon css-dvq678"
        focusable={false}
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    className="css-1kuyx4r"
  >
    <div
      className="css-1vh6z56"
    >
      <div
        className="chakra-stack css-1m56apc"
      >
        <a
          className="chakra-link css-1o9qqxh"
          href="/"
          rel="noopener noreferrer"
        >
          <div
            className="css-1btwv0h"
          >
            <svg
              className="chakra-icon css-1nsz2z9"
              focusable={false}
              viewBox="0 0 33.787568 17.315006"
            >
              <g>
                <text
                  x=".021"
                  y="10.118"
                >
                  YES
                </text>
                <text
                  x=".042"
                  y="17.251"
                >
                  THEORY
                </text>
                <text
                  fill="#0167ff"
                  transform="rotate(90)"
                  x="-.489"
                  y="-27.315"
                >
                  FAM
                </text>
              </g>
            </svg>
          </div>
        </a>
        <a
          className="chakra-link css-f6i9u1"
          href="/blog"
          rel="noopener noreferrer"
        >
          Blog
        </a>
        <a
          className="chakra-link css-1q4kjoy"
          href="/photowall"
          rel="noopener noreferrer"
        >
          Photowall
        </a>
        <button
          aria-controls="menu-list-profile-menu"
          aria-expanded={false}
          aria-haspopup="menu"
          className="chakra-menu__menu-button css-1eqi7qs"
          id="menu-button-profile-menu"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span
            className="css-xl71ch"
          >
            <div
              className="chakra-stack css-192p3t8"
            >
              <p
                className="chakra-text css-x13lj8"
              >
                Logged in as:
              </p>
              <div
                className="chakra-stack css-15lgeks"
              >
                <span
                  className="chakra-avatar css-vkvvxo"
                >
                  <div
                    aria-label="geisterfurz007#5952"
                    className="chakra-avatar__initials css-0"
                    role="img"
                  >
                    g
                  </div>
                  <div
                    className="chakra-avatar__badge css-1llap6j"
                  />
                </span>
                <p
                  className="chakra-text css-8wu8jt"
                >
                  geisterfurz007#5952
                </p>
              </div>
              <p
                className="chakra-text css-1aj8j1t"
              >
                Logged in as:
              </p>
            </div>
          </span>
        </button>
        <span />
      </div>
    </div>
  </div>
</div>
`;
